[package]
name = "richparse"
version = "0.2.0"
edition = "2024"
description = "A Rust library for parsing rich text markup into ANSI escape sequences for terminal output."
license = "MIT"
repository = "https://github.com/hamsterbyte/richparse"
keywords = ["ansi", "terminal", "rich-text", "color",  "cli"]
categories = ["command-line-interface", "text-processing"]

[dependencies]
fluent-bundle = { version = "0.16", optional = true }

[dev-dependencies]
fluent-bundle = "0.16"
unic-langid = { version = "0.9", features = ["macros"] }

[features]
intl = ["dep:fluent-bundle"]
